Added AnimalBreed, AnimalSize, and Listing.Description;
